Fix fixed background of offer section to stretchable one

--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -21,17 +21,15 @@
         display: block;
         position: absolute;
         width: 50%;
-        max-width: 750px;
+        max-width: 100%;
         height: 694px;
         top: 0;
         left: 50%;
-
         background-image: linear-gradient(@transparent-green, @transparent-green),
           url("../img/offer-section/index-background-desktop.png");
-        background-position: right top;
+        background-position: left top;
         background-repeat: no-repeat;
         background-size: cover;
-
         z-index: -1;
       }
     }
